--- a/PNTeam3/Packages/manifest.json
+++ b/PNTeam3/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.adaptiveperformance": "4.0.1",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.feature.mobile": "1.0.0",
